--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <script src="Ground.js"></script>
     <script src="Box.js"></script>
     <script src="sling.js"></script>
+     <script src="p5.play.js"></script>
     <script src="Polygon.js"></script>
     
     <link rel="stylesheet" type="text/css" href="style.css">
